@@ -105,6 +105,14 @@ define(function (require) {
     };
 
     /**
+     * TODO:
+     * @method addBackground
+     */
+    Game.prototype.addBackground = function (name, sceneId, backgroundDesc) {
+        this.gui.addElement(sceneId, new GUI.Background(name, backgroundDesc).elem);
+    };
+
+    /**
      * Execute a update-render cycle
      *
      * @method loop
