@@ -35,6 +35,7 @@ define(function (require) {
     GUI = function (container) {
         this.container = container;
         this.views = {};
+        this.addView("all");
         this.activeView = null;
     };
 
@@ -47,7 +48,11 @@ define(function (require) {
         this.views[viewId].style.width = this.container.clientWidth + "px";
         this.views[viewId].style.height = this.container.clientHeight + "px";
         this.views[viewId].style.position = "absolute";
-        this.views[viewId].style.visibility = "hidden";
+
+        if (viewId !== "all") {
+            this.views[viewId].style.visibility = "hidden";
+        }
+
         this.container.appendChild(this.views[viewId]);
     };
 
@@ -87,6 +92,7 @@ define(function (require) {
         this.elem.style.position = "absolute";
         this.elem.style.left = labelDesc.x + "px";
         this.elem.style.top = labelDesc.y + "px";
+        this.elem.style["z-index"] = 2;
 
         for (i = 0, l = cssRules.length; i < l; i += 1) {
             prop = cssRules[i].split(":")[0];
@@ -130,6 +136,7 @@ define(function (require) {
         this.elem.style.border = "0";
         this.elem.style.padding = "0";
         this.elem.style.cursor = "pointer";
+        this.elem.style["z-index"] = 2;
 
         if (buttonDesc.text !== undefined) {
             this.elem.innerHTML = buttonDesc.text;
@@ -152,6 +159,29 @@ define(function (require) {
         }));
     };
     extend(eventEmitter, GUI.Button.prototype);
+
+    /**
+     * TODO:
+     */
+    GUI.Background = function (name, backgroundDesc) {
+        var image = resourceAssistant.getImage(name);
+
+        this.elem = document.createElement('div');
+
+        this.elem.style.position = "absolute";
+        this.elem.style.left = backgroundDesc.x + "px";
+        this.elem.style.top = backgroundDesc.y + "px";
+        this.elem.style["z-index"] = 0;
+
+        if (backgroundDesc.image !== undefined) {
+            this.elem.style.background = "url(" + image.src + ") no-repeat";
+            this.elem.style.width = image.width + "px";
+            this.elem.style.height = image.height + "px";
+        } else {
+            this.elem.style.width = backgroundDesc.width + "px";
+            this.elem.style.height = backgroundDesc.height + "px";
+        }
+    };
 
     return GUI;
 });
