@@ -23,6 +23,7 @@ define(function (require) {
         canvas = givenCanvas;
         canvas.width = w;
         canvas.height = h;
+        canvas.style["z-index"] = 1;
         ctx = canvas.getContext("2d");
     }
 
