@@ -26,6 +26,8 @@ define(function (require) {
     function loadImage(name, path, callback) {
         var image = new window.Image();
 
+        console.log(name);
+        console.log(path);
         if (images[path] !== undefined) {
             callback(image);
         } else {
